# PELLETINO

./: .gitignore  AGENTS.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/audio_hal/include/: audio_hal.h  namco_wsg.h
components/audio_hal/src/: audio_hal.cpp  namco_wsg.cpp
components/display/include/: display.h
components/display/src/: display.cpp
components/pacman_hw/: CMakeLists.txt
components/pacman_hw/include/: pacman_hw.h  qmi8658.h
components/pacman_hw/src/: pacman_hw.cpp  pacman_input.cpp  pacman_video.cpp  qmi8658.cpp
main/: CMakeLists.txt
main/include/: game_state.h
main/src/: fiesta_video.c  game_state.c  main.cpp
model/: FIESTA_2026_BACK_SCREWHOLES.stl  FIESTA_2026_medal_cover.stl  Fiesta_wbatteryroom.stl  Fiesta_wbatteryroom_and_title.stl  Konomi_Body_wiresandring.stl  caseback-smallerholes-notitle.stl
model/FIESTA/: 3Piece-Back (1).stl  3Piece-Front-FancyTitle.stl  3Piece-Front-MonoTitle.stl  3Piece-Front.stl  3Piece-Middle.stl  New3-Back.stl  New3-Backv2.stl  New3-Backv3.stl  New3-Front.stl  New3-Frontv2.stl  New3-Frontv3.stl  New3-Middle.stl  New3-MiddleRing.stl  New3-MiddleRingButtons.stl  New3-MiddleRingButtonsv2.stl  New3-Middlev3.stl  obj_13_pacman.stl  obj_14_pacman.stl  obj_26_pacman ghostv2.stl  obj_27_pacman ghostv2.stl
movie/: find_optimal_video.sh  make_fiesta.sh
tools/: convert_roms.py
